--- a/androidx-app/src/main/res/values/strings.xml
+++ b/androidx-app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="network_not_available">网络连接中断</string>
     <string name="other_error">其他错误</string>
     <string name="network_timeout">请求超时</string>
+    <string name="http_404">HTTP 404 Not Found</string>
 </resources>
